tests/error/type_match/if_expr_incompatible_types.bz
function test(b: bool)
{
	let _ = if (b) {
		0i32
	} else {
		1u32
	};
}
